# platform-input-support

./: .buildinfo  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  annotations_input.csv  check_corrupted_files.sh  config.yaml  config_dev.yaml  definitions.py  deploy_quay.sh  environment.yaml  environment_mac.yaml  evidences_input.csv  ftpGet.py  genindex.html  index.html  minimal_ensembl.txt  objects.inv  overrides.txt  pis.config.html  pis.manifest.html  pis.step.html  pis.storage.html  pis.task.html  pis.tasks.html  pis.util.html  pis.validators.html  platform-input-support.py  pre-commit.githook  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  pis.config.doctree  pis.manifest.doctree  pis.step.doctree  pis.storage.doctree  pis.task.doctree  pis.tasks.doctree  pis.util.doctree  pis.validators.doctree
.github/utils/: bump_version.sh
.github/workflows/: build-dev.yaml  build-release.yaml  build.yaml  ci-pr.yaml  ci.yaml  docs.yaml  documentation.yaml  pr.yaml  publish-image.yaml  release.yaml  test.yaml  version.yaml
_modules/: index.html
_modules/pis/: config.html  core.html  task.html  validators.html
_sources/: index.rst.txt  pis.storage.rst.txt
docker-script/: entrypoint.sh
docs/: Makefile
docs/source/: conf.py  index.rst  pis.config.rst  pis.manifest.rst  pis.storage.rst  pis.tasks.rst  pis.util.rst  pis.validators.rst  platform_input_support.config.rst  platform_input_support.helpers.rst  platform_input_support.manifest.rst  platform_input_support.step.rst  platform_input_support.task.rst  platform_input_support.tasks.rst  platform_input_support.util.rst  platform_input_support.validators.rst
launcher/: launch_pis.tf  locals.tf  main.tf  terraform.tfvars  variables.tf
log/: .README
manifest/: __init__.py  models.py  services.py
minimal_dataset/: efos.txt  genes.txt
modules/: AnnotationQC.py  ChEMBL.py  ChemicalProbesResource.py  DataPipelineConfig.py  DownloadResource.py  Drug.py  ECO.py  EFO.py  EnsemblCondaResource.py  EnsemblResource.py  EvidenceSubset.py  GoogleBucketResource.py  GoogleSpreadSheet.py  HPA.py  Homologues.py  Homology.py  Interactions.py  KnownTargetSafetyResource.py  MousePhenotypes.py  Networks.py  OTNetwork.py  OpenFDA.py  RetrieveAnnotations.py  RetrieveEvidences.py  RetrieveResource.py  SO.py  SparkHelpers.py  StringInteractions.py  StringNetwork.py  TEP.py  Target.py  cfg.py
modules/common/: DownloadResource.py  Downloads.py  ElasticsearchHelper.py  ElasticsearchReader.py  GoogleBucketResource.py  GoogleSpreadSheet.py  Riot.py  TqdmUpTo.py  Utils.py  YAMLReader.py  __init__.py
modules/helpers/: EFO.py  HPO.py  HPOPhenotypes.py  MONDO.py
old/: Makefile  config-copy.yaml  config.yaml
old/launcher/: backend.tf  locals.tf  outputs.tf
old/plugins/: disease.yapsy-plugin  drug.py  evidence.py  evidence.yapsy-plugin  go.py  go.yapsy-plugin  homologues.py  literature.py  literature.yapsy-plugin  mouse_phenotypes.yapsy-plugin  pharmacogenomics.yapsy-plugin  ppp_evidence.py  reactome.py  reactome.yapsy-plugin  so.py  so.yapsy-plugin  target.py  target_engine.yapsy-plugin
old/profiles/: config.dev
old/tests/: test_download_resource.py
platform_input_support/: __init__.py  core.py  logger.py
platform_input_support/action/: __init__.py  action.py  action_repository.py
platform_input_support/actions/: download.py  download_latest.py  find_latest.py  get_file_list.py  hello_world.py
platform_input_support/config/: __init__.py  cli.py  cli_test.py  config.py  config_test.py  env.py  env_test.py  models.py  parse_cli.py  parse_yaml.py  scratchpad.py  scratchpad_test.py  yaml.py  yaml_test.py
platform_input_support/helpers/: __init__.py  download.py  download_test.py  google.py  google_test.py
platform_input_support/logger/: __init__.py  logger.py
platform_input_support/manifest/: __init__.py  manifest.py  manifest_test.py  models.py  reporters.py  services.py  step_reporter.py  task_reporter.py  util.py
platform_input_support/modules/: RetrieveResource.py  cfg.py  retrieve_resource.py
platform_input_support/plugins/: BaselineExpression.py  Disease.py  Drug.py  Evidence.py  Evidence.yapsy-plugin  Expression.py  GO.py  Homologues.py  Interactions.py  Literature.py  MousePhenotypes.py  Openfda.py  Otar.py  PPPEvidence.py  PPPEvidence.yapsy-plugin  Pharmacogenomics.py  Reactome.py  Reactome.yapsy-plugin  SO.py  SO.yapsy-plugin  Target.py  TargetEngine.py  baseline_expression.py  baseline_expression.yapsy-plugin  disease.py  drug.py  drug.yapsy-plugin  evidence.py  expression.py  expression.yapsy-plugin  go.py  homologues.py  homologues.yapsy-plugin  interactions.py  interactions.yapsy-plugin  literature.py  literature.yapsy-plugin  mouse_phenotypes.py  openfda.py  openfda.yapsy-plugin  (+10 more)
platform_input_support/scratch_pad/: __init__.py  scratch_pad.py
platform_input_support/step/: step.py  step_repository.py
platform_input_support/steps/: go.py
platform_input_support/task/: __init__.py  task.py  task_registry.py  task_registry_test.py  task_repository.py
plugins/: BaselineExpression.py  BaselineExpression.yapsy-plugin  Disease.py  Disease.yapsy-plugin  Drug.py  Drug.yapsy-plugin  Evidence.py  Expression.py  Expression.yapsy-plugin  GO.py  GO.yapsy-plugin  Homologues.py  Homologues.yapsy-plugin  Interaction.yapsy-plugin  Interactions.py  Literature.py  MousePhenotypes.py  MousePhenotypes.yapsy-plugin  Openfda.py  Openfda.yapsy-plugin  Otar.py  Otar.yapsy-plugin  OtarProjects.py  OtarProjects.yapsy-plugin  PPPEvidence.py  Pharmacogenomics.py  Pharmacogenomics.yapsy-plugin  Reactome.py  SO.py  Target.py  Target.yapsy-plugin  TargetEngine.py  TargetEngine.yapsy-plugin  literature.py
profiles/: config.2406  config.dev  config.dev-ppp
resources/: logging.ini
scripts/: pre-commit.githook  run.sh
singularity/: ebi.sh
src/pis/: core.py  (+1 more)
tests/: test_common_init.py  test_disease_step.py  test_download_resource.py  test_drug_step.py  test_latest_file.py  test_retrieve_resource.py  test_yaml_reader.py
(+210 files in other folders)
