[tool.poetry]
name = "platform-input-support"
version = "24.0.0"
description = "Open Target's Platform Input Support Application"
authors = ["Open Targets"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
addict = "^2.4.0"
ConfigArgParse = "^1.7"
elasticsearch = "7.17.0"
elasticsearch-dsl = "7.4.1"
jsonlines = "^4.0.0"
google-cloud-storage = "1.42.3"
gspread = "^5.12.2"
PyYAML = "^6.0.1"
Yapsy = "^1.12.2"
tqdm = "^4.66.1"
jsonpickle = "^3.0.2"
munch = "^4.0.0"
opentargets-urlzsource = "1.0.0"
strenum = "^0.4.15"
furl = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
